--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "typer>=0.9.0",
     "pytest>=7.4.0",
     "moto>=4.2.0",
+    "tenacity (>=9.1.2,<10.0.0)",
 ]
 requires-python = ">=3.10"
 
